Issue resolve responsive and blog spacing

--- a/src/assets/scss/page/_global.scss
+++ b/src/assets/scss/page/_global.scss
@@ -314,6 +314,9 @@ body {
 	.horizontal-scroll-wrapper .one:last-child {
 	    top: -638px;
 	}
+	h3{
+		font-size: 1.4rem;
+	}
 }
 
 .contact-us-page{
@@ -371,6 +374,7 @@ p{
 .pagination{
 	width: 100%;
 	text-align: center;
+	margin: 100px 0 50px;
 	li{
 		vertical-align: top;
 		padding: 0px!important;
